Adding bulk comic creation API
