# api/controllers/comic.js
@@ -2,12 +2,14 @@
 
 const models = require('../../models');
 const controllerize = require('../helpers/controllerize');
+const Bluebird = require('bluebird');
 const Comic = models.Comic;
 
 module.exports = controllerize({
   comic_list: list,
   comic_get: get,
   comic_create: create,
+  comic_bulkCreate: bulkCreate,
   comic_put: put,
 });
 
@@ -23,6 +25,12 @@ function get(req, res) {
 function create(req, res) {
   return Comic
     .create(req.body)
+    .tap( () => res.status(201) );
+}
+
+function bulkCreate(req, res) {
+  return Bluebird
+    .map(req.swagger.params.comics.value, comic => Comic.create(comic))
     .tap( () => res.status(201) );
 }
 
